--- a/src/app/modules/new-campaign/components/campaign-details/campaign-details.component.html
+++ b/src/app/modules/new-campaign/components/campaign-details/campaign-details.component.html
@@ -75,7 +75,7 @@
                formControlName="campaignCategory"
                [ngClass]="{ 'is__invalid-input': submitted && f['campaignCategory'].errors }"
                class="bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
-                <option selected [ngValue]="">Choose campaign type...</option>
+                <option selected value="">Choose campaign type...</option>
                 <option  *ngFor="let choice of adtype" [ngValue]="choice.fileTypeName">{{choice.fileTypeName}}</option>
               </select>
             </div>
@@ -91,7 +91,7 @@
             <select id="countries"
             [ngClass]="{ 'is__invalid-input': submitted && f['industryName'].errors }"
             formControlName="industryName" class="bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
-              <option [ngValue]="" selected>Choose campaign industry..</option>
+              <option value="" selected>Choose campaign industry..</option>
               <option *ngFor="let choice of industry" [ngValue]="choice.industryCode">
                 {{choice.industryName}}</option>
             </select>
@@ -127,7 +127,7 @@
 
         <div class="flex flex-col md:flex-row">
           <div class="w-full flex-1 mx-2 svelte-1l8159u">
-            <div class="font-bold text-gray-600 text-xs leading-8 h-6 mx-2 mt-3">Industry</div>
+            <div class="font-bold text-gray-600 text-xs leading-8 h-6 mx-2 mt-3">Description</div>
             <div class="my-2 p-1 flex svelte-1l8159u">
               <textarea
               [ngClass]="{ 'is__invalid-input': submitted && f['description'].errors }"
