updated camapign deletetion feature

--- a/src/app/modules/auth/auth.component.html
+++ b/src/app/modules/auth/auth.component.html
@@ -1,11 +1,12 @@
 <div class="flex min-h-screen min-w-screen">
+
   <div class="auth-bg hidden flex-1 items-center justify-center bg-primary-500 bg-cover lg:flex">
     <div class="max-w-2xl space-y-4 p-8 text-center text-white">
-      <!-- <img src="./assets/images/richard-new.png" height="100" width="200" alt="dashboard widget" /> -->
-      <h1 class="text-4xl font-bold">"Let the Ad-Venture Begin"</h1>
+      <img src="./assets/images/richard-new.png" class="max-h-screen max-w-screen" alt="dashboard widget" />
+      <!-- <h1 class="text-4xl font-bold">"Let the Ad-Venture Begin"</h1>
       <p class="text-xs font-light">
         Welcome, Login and monitor how your business is performing with <span class="cursor-pointer font-medium text-yellow-400">Ad analytics</span>.
-      </p>
+      </p> -->
     </div>
   </div>
   <div class="flex flex-1 items-center justify-center bg-white dark:bg-night-700">
