--- a/src/app/modules/layout/components/navbar/navbar.component.html
+++ b/src/app/modules/layout/components/navbar/navbar.component.html
@@ -10,8 +10,8 @@
           aria-expanded="false">
           <span class="sr-only">Open menu</span>
           <!-- Heroicon name: outline/menu -->
-          <!-- <svg-icon src="assets/icons/outline/menu.svg" [svgClass]="'h-6 w-6'"> </svg-icon> -->
-          <img src="../../../assets/images/ra-icon-white.png">
+          <svg-icon src="assets/icons/outline/menu.svg" [svgClass]="'h-6 w-6'"> </svg-icon>
+          <!-- <img src="../../../assets/images/ra-icon-white.png"> -->
         </button>
       </div>
 
