--- a/src/app/modules/dashboard/components/nft/nft-header/nft-header.component.html
+++ b/src/app/modules/dashboard/components/nft/nft-header/nft-header.component.html
@@ -9,11 +9,11 @@
   <div class="inline-block space-x-4">
     <button
       class="flex-none rounded-md bg-white px-4 py-2.5 text-xs font-semibold text-gray-500 hover:text-primary-500 dark:bg-night-600 dark:text-night-200 dark:hover:bg-night-500">
-      Live campaigns: 4
+      Live campaigns: 1
     </button>
     <button
       class="flex-none rounded-md bg-primary-500 px-4 py-2.5 text-xs font-semibold text-white hover:bg-primary-600">
-      Available Balance: 34,000
+      Available Balance: KES: {{accountBalance}}
     </button>
   </div>
 </div>
