--- a/src/app/modules/dashboard/pages/secondary-campaigns/secondary-campaigns.component.html
+++ b/src/app/modules/dashboard/pages/secondary-campaigns/secondary-campaigns.component.html
@@ -5,7 +5,8 @@
       <span class="text-sm text-gray-400 dark:text-night-300">Camapigns managed by an agency</span>
     </div>
     <button
-      class="flex-none rounded-md bg-primary-600 px-4 py-2.5 text-xs font-semibold text-white hover:bg-gray-200 dark:bg-night-600 dark:text-night-200 dark:hover:bg-night-500">
+      routerLink="/app/new-campaign/campaign-details"
+      class="flex-none rounded-md bg-primary-600 px-4 py-2.5 text-xs font-semibold text-white hover:bg-primary-400 dark:bg-night-600 dark:text-night-200 dark:hover:bg-night-500">
       Add New Campaign
     </button>
   </div>
