--- a/src/app/modules/layout/components/navbar/profile-menu/profile-menu.component.html
+++ b/src/app/modules/layout/components/navbar/profile-menu/profile-menu.component.html
@@ -1,4 +1,4 @@
-<div class="relative ml-3">
+<div class="relative ml-3 z-20">
   <!-- Profile Button -->
   <button
     (click)="toggleMenu()"
@@ -11,7 +11,7 @@
       clickOutside
       (clickOutside)="isMenuOpen = false"
       class="h-9 w-9 rounded-md"
-      src="https://avatars.githubusercontent.com/u/12519008?v=4"
+      src="assets/avatars/avt.png"
       alt="" />
   </button>
   <!-- Dropdown -->
