--- a/src/app/modules/new-campaign/components/location/location.component.html
+++ b/src/app/modules/new-campaign/components/location/location.component.html
@@ -50,45 +50,64 @@
 <!--METRICS SECTION-->
 <div class="m-4">
   <form [formGroup]="form">
-
-    <div class="flex flex-col md:flex-row">
-    <div class="w-full flex-2 mx-2 svelte-1l8159u">
+    <div class="flex  md:flex-row">
+    <div class="w-[90%] flex-2 mx-2 svelte-1l8159u">
       <div class="font-bold text-gray-600 text-xs leading-8 h-6 mx-2 mt-3">Campaign location</div>
       <div class="bg-white my-2 p-1 flex border border-gray-200 rounded-lg svelte-1l8159u">
-        <input placeholder="Enter location name.." class="p-1 px-2 appearance-none outline-none w-full text-gray-800">
+        <input placeholder="Enter location name.."
+        class="p-1 px-2 appearance-none outline-none w-full text-gray-800"
+        #search
+        (keydown.enter)="$event.preventDefault()"
+        formControlName='selectedLocation'
+        >
       </div>
-
     </div>
-    <div class="my-2 mx-2 p-1 flex-1  svelte-1l8159u">
+    <div class="w-[10%] p-1 my-1  svelte-1l8159u">
       <div class="font-bold text-gray-600 text-xs leading-8 h-6 mx-2 mt-3"></div>
-      <div class="border p-2 rounded-lg bg-gray-300">
-        <button class="">
-          <svg-icon src="assets/icons/outline/refresh.svg"> [svgClass]="'w-5'"> </svg-icon>
-        </button>
-      </div>
-    </div>
-    </div>
-    <div class="flex flex-col md:flex-row">
-    <div class="w-full flex-1 mx-2 svelte-1l8159u">
-    <div class="font-bold text-gray-600 text-xs leading-8 h-6 mx-2 mt-3">Radius coverage</div>
-    <div class="bg-white my-2 p-1 flex border border-gray-200 rounded-lg svelte-1l8159u">
-      <input placeholder="in kilometers. E.g 2" class="p-1 px-2 appearance-none outline-none w-full text-gray-800">
-    </div>
+      <button (click)="launcLocationSetup()" type="button" class="text-center text-gray-700 bg-gray-300 hover:bg-blue-800 cursor-pointer focus:outline-none font-medium rounded text-sm px-5 py-2.5 text-center mr-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 hover:text-white inline-flex items-center">
+        <svg-icon src="assets/icons/outline/refresh.svg" [svgClass]="'w-5'"> </svg-icon>
+      </button>
     </div>
     </div>
 
+    <div class="flex  md:flex-row">
+      <div class="w-[80%] flex-2 mx-2 svelte-1l8159u">
+        <div class="font-bold text-gray-600 text-xs leading-8 h-6 mx-2 mt-3">Radius Coverage</div>
+        <div class="bg-white my-2 p-1 flex border border-gray-200 rounded-lg svelte-1l8159u">
+          <input
+          formControlName="radius"
+          class="p-1 px-2 appearance-none outline-none w-full text-gray-800"
+          placeholder="in kilometers. E.g 2"
+          >
+        </div>
+
+      </div>
+      <div class="w-[20%] p-1 my-1  svelte-1l8159u">
+        <div class="font-bold text-gray-600 text-xs leading-8 h-6 mx-2 mt-3"></div>
+        <button *ngIf="!loading" (click)="setCurrentNewLocation()" type="button" class="text-center text-white bg-blue-800 hover:bg-blue-800 cursor-pointer focus:outline-none font-medium rounded text-sm px-5 py-2.5 text-center mr-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 inline-flex items-center">
+          Save & Continue
+        </button>
+        <button *ngIf="loading" disabled type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded text-sm px-5 py-2.5 text-center mr-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 inline-flex items-center">
+          <svg aria-hidden="true" role="status" class="inline mr-3 w-4 h-4 text-white animate-spin" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z" fill="#E5E7EB"></path>
+          <path d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z" fill="currentColor"></path>
+          </svg>
+          Loading...
+      </button>
+      </div>
+      </div>
 
     <div class="flex-col rounded-lg my-2 bg-white px-4 py-4 dark:bg-night-700 sm:flex-row">
       <div  class="relative overflow-x-auto">
-       <agm-map  style="height: 350px;"  [latitude]="lat" [longitude]="long" [zoom]="7">
-         <agm-marker [latitude]="lat" [longitude]="long"
+       <agm-map  style="height: 400px;"  [latitude]="latitude" [longitude]="longitude" [zoom]="7">
+         <agm-marker [latitude]="latitude" [longitude]="longitude"
            ></agm-marker>
        </agm-map>
      </div>
    </div>
 
 
-    <div class="flex p-2 mt-4">
+    <!-- <div class="flex p-2 mt-4">
     <button class="text-base hover:scale-110 focus:outline-none flex justify-center px-4 py-2 rounded font-bold cursor-pointer
     hover:bg-gray-200
     bg-gray-100
@@ -106,7 +125,7 @@
     >Next</button>
 
     </div>
-    </div>
+    </div> -->
   </form>
 </div>
 
