--- a/src/app/modules/new-campaign/components/campaign-assets/camapign-assets.component.html
+++ b/src/app/modules/new-campaign/components/campaign-assets/camapign-assets.component.html
@@ -51,46 +51,51 @@
 <div>
   <form [formGroup]="form">
     <div class="flex flex-col md:flex-row">
-    <div class="w-full flex-1 mx-2 svelte-1l8159u"  *ngIf="showFirst">
+    <div class="w-full flex-1 mx-2 svelte-1l8159u">
     <div class="font-bold text-gray-600 text-xs leading-8 h-6 mx-2 mt-3">Campaign Logo</div>
     <div class="bg-white my-2 p-1 flex border border-gray-200 rounded-lg svelte-1l8159u">
       <div class="flex items-center justify-center w-full">
        <label for="dropzone-logo" class="flex flex-col items-center justify-center w-full h-54 border-2 border-gray-300 border-dashed rounded-lg cursor-pointer bg-white dark:hover:bg-bray-800 dark:bg-gray-700 hover:bg-gray-100 dark:border-gray-600 dark:hover:border-gray-500 dark:hover:bg-gray-600">
-            <div class="flex flex-col items-center justify-center pt-5 pb-6">
+              <div *ngIf="this.logoUploaded" class="flex flex-col items-center justify-center pt-5 pb-6">
+                <svg-icon src="assets/images/success-green.svg" [svgClass]="'h-12 w-12'"> </svg-icon>
+                <p class="font-semibold p-4">Logo Uploaded</p>
+              </div>
+              <div *ngIf="!this.logoUploaded" class="flex flex-col items-center justify-center pt-5 pb-6">
                 <svg aria-hidden="true" class="w-10 h-10 mb-3 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M15 13l-3-3m0 0l-3 3m3-3v12"></path></svg>
                 <p class="mb-2 text-sm text-gray-500 dark:text-gray-400"><span class="font-semibold">Click to upload <em class="text-blue-700">Logo</em> </span> or drag and drop</p>
                 <p class="text-xs text-gray-500 dark:text-gray-400">SVG, PNG, JPG or GIF (MAX. 800x400px)</p>
-            </div>
+              </div>
             <input #icon formControlName="icon" (change)="addLogo($event)" accept='image/*' id="dropzone-logo" type="file" class="hidden" />
         </label>
     </div>
     </div>
-    <div class="w-full bg-gray-200 rounded-full dark:bg-gray-700">
+    <div *ngIf="this.uploadingLogo" class="w-full bg-gray-200 rounded-full dark:bg-gray-700">
       <div class="bg-green-600 text-xs font-medium text-blue-100 text-center p-0.5 leading-none rounded-full" [style.width.%]="progress"> {{progress}}%</div>
     </div>
     </div>
-    <div class="w-full flex-1 mx-2 svelte-1l8159u" *ngIf="showSecond">
+    <div class="w-full flex-1 mx-2 svelte-1l8159u" [hidden]="campaignType ==='Survey'">
     <div class="font-bold text-gray-600 text-xs leading-8 h-6 mx-2 mt-3">Campaign File</div>
     <div class="bg-white my-2 p-1 flex border border-gray-200 rounded-lg svelte-1l8159u">
       <div class="flex items-center justify-center w-full">
         <label for="dropzone-file" class="flex flex-col items-center justify-center w-full h-54 border-2 border-gray-300 border-dashed rounded-lg cursor-pointer bg-white dark:hover:bg-bray-800 dark:bg-gray-700 hover:bg-gray-100 dark:border-gray-600 dark:hover:border-gray-500 dark:hover:bg-gray-600">
-            <div class="flex flex-col items-center justify-center pt-5 pb-6">
+            <div *ngIf="this.fileLoaded" class="flex flex-col items-center justify-center pt-5 pb-6">
+              <svg-icon src="assets/images/success-green.svg" [svgClass]="'h-12 w-12'"> </svg-icon>
+              <p class="font-semibold p-4">File Uploaded</p>
+            </div>
+            <div *ngIf="!fileLoaded" class="flex flex-col items-center justify-center pt-5 pb-6">
                 <svg aria-hidden="true" class="w-10 h-10 mb-3 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M15 13l-3-3m0 0l-3 3m3-3v12"></path></svg>
                 <p class="mb-2 text-sm text-gray-500 dark:text-gray-400"><span class="font-semibold">Click to upload <em class="text-blue-700">File</em></span> or drag and drop</p>
                 <p class="text-xs text-gray-500 dark:text-gray-400">SVG, PNG, JPG or GIF (MAX. 800x400px)</p>
             </div>
-            <input #file (change)="addFile($event)" formControlName="file"  id="dropzone-file" type="file" class="hidden" />
+            <input *ngIf="campaignType === 'Video'" #file (change)="addFile($event)" formControlName="file" accept="video/*"  id="dropzone-file" type="file" class="hidden" />
+            <input *ngIf="campaignType === 'Social'" #file (change)="addFile($event)" formControlName="file" accept="image/*"  id="dropzone-file" type="file" class="hidden" />
         </label>
     </div>
     </div>
 
-    <div class="w-full bg-gray-200 rounded-full dark:bg-gray-700">
+    <div *ngIf="this.uploadingFile" class="w-full bg-gray-200 rounded-full dark:bg-gray-700">
       <div class="bg-green-600 text-xs font-medium text-blue-100 text-center p-0.5 leading-none rounded-full" [style.width.%]="progress"> {{progress}}%</div>
     </div>
-<!--
-    <div class="w-full bg-gray-200 rounded-full h-2.5 mb-4 dark:bg-gray-700">
-      <div class="bg-green-600 h-2.5 rounded-full dark:bg-green-500" [style.width.%]="progress"></div> -->
-    <!-- </div> -->
     </div>
     </div>
     <div class="flex p-2 mt-4">
@@ -106,7 +111,7 @@
       </svg>
       Loading...
     </button>
-    <button [disabled]="!goNext" routerLink="/app/new-campaign/metrics" *ngIf="!loading" type="button" class="text-white bg-blue-700 hover:bg-blue-800 cursor-pointer focus:outline-none font-medium rounded text-sm px-5 py-2.5 text-center mr-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 inline-flex items-center">
+    <button [disabled]="!fileLoaded && !logoUploaded" (click)="next()" *ngIf="!loading" type="button" class="text-white bg-blue-700 hover:bg-blue-800 cursor-pointer focus:outline-none font-medium rounded text-sm px-5 py-2.5 text-center mr-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 inline-flex items-center">
       Continue
     </button>
 
