--- a/src/app/modules/new-campaign/components/campaign-details/campaign-details.component.html
+++ b/src/app/modules/new-campaign/components/campaign-details/campaign-details.component.html
@@ -71,6 +71,7 @@
           <div class="font-bold text-gray-600 text-xs leading-8 h-6 mx-2 mt-3">Campaign Type</div>
             <div class="my-2 p-1 flex svelte-1l8159u">
               <select id="countries"
+                (change)="onTypeChange($event)"
                formControlName="campaignCategory"
                [ngClass]="{ 'is__invalid-input': submitted && f['campaignCategory'].errors }"
                class="bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
@@ -103,25 +104,24 @@
 
 
         <div class="flex flex-col md:flex-row">
-        <div class="w-full flex-1 mx-2 svelte-1l8159u">
-        <div class="font-bold text-gray-600 text-xs leading-8 h-6 mx-2 mt-3">Link to your platform(Optional)</div>
-        <div class="bg-white my-2 p-1 flex border border-gray-200 rounded-lg svelte-1l8159u">
-            <input placeholder="Add link to your application or website"
-            formControlName="linkUrl" class="p-1 px-2 appearance-none outline-none w-full text-gray-800"> </div>
-        </div>
-
-        <div class="w-full flex-1 mx-2 svelte-1l8159u">
-          <div class="font-bold text-gray-600 text-xs leading-8 h-6 mx-2 mt-3">Campaign hash tag</div>
+          <div class="w-full flex-1 mx-2 svelte-1l8159u">
+            <div class="font-bold text-gray-600 text-xs leading-8 h-6 mx-2 mt-3">Campaign hash tag</div>
+              <div class="bg-white my-2 p-1 flex border border-gray-200 rounded-lg svelte-1l8159u">
+                  <input placeholder="Enter campaign tags"
+                  [ngClass]="{ 'is__invalid-input': submitted && f['tag'].errors }"
+                  formControlName="tag"
+                  class="p-1 px-2 appearance-none outline-none w-full text-gray-800">
+              </div>
+              <div *ngIf="submitted && f['tag'].errors" class="is__invalid-error">
+                <div *ngIf="f['tag'].errors['required']">Required field</div>
+              </div>
+            </div>
+          <div class="w-full flex-1 mx-2 svelte-1l8159u">
+          <div class="font-bold text-gray-600 text-xs leading-8 h-6 mx-2 mt-3">Link to your platform(Optional)</div>
             <div class="bg-white my-2 p-1 flex border border-gray-200 rounded-lg svelte-1l8159u">
-                <input placeholder="Enter campaign tags"
-                [ngClass]="{ 'is__invalid-input': submitted && f['tag'].errors }"
-                formControlName="tag"
-                class="p-1 px-2 appearance-none outline-none w-full text-gray-800">
+                <input placeholder="Add link to your application or website"
+                formControlName="linkUrl" class="p-1 px-2 appearance-none outline-none w-full text-gray-800"> </div>
             </div>
-            <div *ngIf="submitted && f['tag'].errors" class="is__invalid-error">
-              <div *ngIf="f['tag'].errors['required']">Required field</div>
-            </div>
-          </div>
         </div>
 
         <div class="flex flex-col md:flex-row">
@@ -156,7 +156,6 @@
       <button (click)="saveDetails()" *ngIf="!loading" type="button" class="text-white bg-blue-700 hover:bg-blue-800 cursor-pointer focus:outline-none font-medium rounded text-sm px-5 py-2.5 text-center mr-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 inline-flex items-center">
         Continue
       </button>
-
         </div>
         </div>
       </form>
