--- a/src/app/modules/new-campaign/components/campaign-metrics/campaign-metrics.component.html
+++ b/src/app/modules/new-campaign/components/campaign-metrics/campaign-metrics.component.html
@@ -128,7 +128,7 @@
     </div>
 
     <div class="flex p-2 mt-4">
-      <button  routerLink="/new-campaign/files" type="button" class="py-2.5 px-5 mr-2 text-sm font-medium text-gray-900 bg-white rounded border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:outline-none dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 inline-flex items-center">
+      <button  routerLink="/app/new-campaign/files" type="button" class="py-2.5 px-5 mr-2 text-sm font-medium text-gray-900 bg-white rounded border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:outline-none dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 inline-flex items-center">
         Previous
       </button>
     <div class="flex-auto flex flex-row-reverse">
