--- a/src/app/modules/dashboard/pages/expenditure/expenditure.component.html
+++ b/src/app/modules/dashboard/pages/expenditure/expenditure.component.html
@@ -16,7 +16,7 @@
       <!--Table head-->
       <thead class="text-xs uppercase text-gray-400 dark:text-night-300">
         <tr>
-          <th class="py-3 text-left">Date Created</th>
+          <th class="py-3 text-center">Date Created</th>
           <th class="py-3 text-left">Transaction</th>
           <th class="py-3 text-center">Amount</th>
           <th class="py-3 text-center">Status</th>
