--- a/src/app/modules/dashboard/pages/roles/roles.component.html
+++ b/src/app/modules/dashboard/pages/roles/roles.component.html
@@ -6,7 +6,7 @@
     </div>
     <button
       class="flex-none rounded-md bg-gray-100 px-4 py-2.5 text-xs font-semibold text-gray-500 hover:bg-gray-200 dark:bg-night-600 dark:text-night-200 dark:hover:bg-night-500">
-      History
+     New Role
     </button>
   </div>
 
