added nginx and dockerfile

--- a/src/app/modules/dashboard/components/nft/nft-auctions-table-item/nft-auctions-table-item.component.html
+++ b/src/app/modules/dashboard/components/nft/nft-auctions-table-item/nft-auctions-table-item.component.html
@@ -34,17 +34,17 @@
 <td class="py-2 pl-2 text-left row">
   <div class="flex justify-start">
     <button
-    href="#"
+    (click)="viewInfo(auction._id)"
     class="flex h-7 w-7 items-center justify-center m-2 rounded-md bg-primary-500 text-gray-200 dark:bg-night-500 dark:text-night-300">
     <svg-icon src="assets/icons/outline/view.svg" [svgClass]="'h-5 w-5'"> </svg-icon>
   </button>
     <button
-      href="#"
+      (click)="editInfo(auction._id)"
       class="flex h-7 w-7 items-center justify-center m-2 rounded-md bg-orange-400 text-gray-200 dark:bg-night-500 dark:text-night-300">
       <svg-icon src="assets/icons/outline/edit1.svg" [svgClass]="'h-5 w-5'"> </svg-icon>
     </button>
     <button
-    href="#"
+    (click)="addQuiz(auction._id)"
     *ngIf="auction.type == 'Video'"
     class="flex h-7 w-7 items-center justify-center m-2 rounded-md bg-gray-400 text-gray-100 dark:bg-night-500 dark:text-night-300">
     <svg-icon src="assets/icons/outline/add.svg" [svgClass]="'h-5 w-5'"> </svg-icon>
