--- a/src/app/modules/dashboard/components/campaign-clicks/campaign-clicks.component.html
+++ b/src/app/modules/dashboard/components/campaign-clicks/campaign-clicks.component.html
@@ -1,59 +1,61 @@
 <div class="flex  flex-col rounded-lg bg-white p-8 dark:bg-night-700">
-  <ngx-spinner bdColor = "#fff" size = "medium" color = "#1520a6" type = "ball-circus" [fullScreen] = "false"><p style="color: white" ></p>Loading...</ngx-spinner>
-  <div class="mb-4 flex items-center justify-between">
-    <div class="flex-col items-center">
-      <h3 class="text-md font-bold text-gray-900 dark:text-night-50">Campaign Performance</h3>
-      <span class="text-sm text-gray-400 dark:text-night-300">Performance by clicks</span>
-    </div>
+  <div class="flex justify-center" *ngIf="loading">
+    <div class="loader simple-circle"></div>
   </div>
-  <div class="flex-col h-[420px] rounded-lg bg-white px-8 py-8 dark:bg-night-700 sm:flex-row">
-    <!-- Card Header -->
-    <div class="mb-2 flex items-center justify-between"  *ngIf="dataLength > 0">
-      <div class="flex-col">
-        <div class="flex items-center space-x-1">
-          <span class="text-lg font-semibold text-gray-400 dark:text-night-300">Best performance</span>
-          <span class="text-4xl font-semibold text-gray-900 dark:text-white">{{maxClicks}}</span>
-          <div class="flex items-center rounded-md bg-green-500/25 py-1 pr-2 pl-1 text-xs font-semibold text-green-500">
-            <svg-icon src="assets/icons/outline/arrow-sm-up.svg" [svgClass]="'h-4 w-4'"></svg-icon>
-            9.2%
+
+  <div *ngIf="!loading">
+    <div class="mb-4 flex items-center justify-between">
+      <div class="flex-col items-center">
+        <h3 class="text-md font-bold text-gray-900 dark:text-night-50">Campaign Performance</h3>
+        <span class="text-sm text-gray-400 dark:text-night-300">Performance by clicks</span>
+      </div>
+    </div>
+    <div class="flex-col h-[420px] rounded-lg bg-white px-8 py-8 dark:bg-night-700 sm:flex-row">
+      <!-- Card Header -->
+      <div class="mb-2 flex items-center justify-between"  *ngIf="dataLength > 0">
+        <div class="flex-col">
+          <div class="flex items-center space-x-1">
+            <span class="text-lg font-semibold text-gray-400 dark:text-night-300">Best performance</span>
+            <span class="text-4xl font-semibold text-gray-900 dark:text-white">{{maxClicks}}</span>
+            <div class="flex items-center rounded-md bg-green-500/25 py-1 pr-2 pl-1 text-xs font-semibold text-green-500">
+              <svg-icon src="assets/icons/outline/arrow-sm-up.svg" [svgClass]="'h-4 w-4'"></svg-icon>
+              9.2%
+            </div>
           </div>
+          <span class="text-sm text-gray-400 dark:text-night-300">Total Reach</span>
         </div>
-        <span class="text-sm text-gray-400 dark:text-night-300">Total Reach</span>
       </div>
 
-    </div>
 
+      <!-- Card Body -->
+      <apx-chart
+        *ngIf="dataLength > 0"
+        [series]="chartOptions.series!"
+        [chart]="chartOptions.chart!"
+        [legend]="chartOptions.legend!"
+        [dataLabels]="chartOptions.dataLabels!"
+        [fill]="chartOptions.fill!"
+        [stroke]="chartOptions.stroke!"
+        [xaxis]="chartOptions.xaxis!"
+        [yaxis]="chartOptions.yaxis!"
+        [states]="chartOptions.states!"
+        [tooltip]="chartOptions.tooltip!"
+        [colors]="chartOptions.colors!"
+        [grid]="chartOptions.grid!"
+        [title]="chartOptions.title!">
+      </apx-chart>
 
-    <!-- Card Body -->
-    <apx-chart
-      *ngIf="dataLength > 0"
-      [series]="chartOptions.series!"
-      [chart]="chartOptions.chart!"
-      [legend]="chartOptions.legend!"
-      [dataLabels]="chartOptions.dataLabels!"
-      [fill]="chartOptions.fill!"
-      [stroke]="chartOptions.stroke!"
-      [xaxis]="chartOptions.xaxis!"
-      [yaxis]="chartOptions.yaxis!"
-      [states]="chartOptions.states!"
-      [tooltip]="chartOptions.tooltip!"
-      [colors]="chartOptions.colors!"
-      [grid]="chartOptions.grid!"
-      [title]="chartOptions.title!">
-    </apx-chart>
+      <!-- end Chart -->
 
-    <!-- end Chart -->
-
-    <div class="flex justify-center" *ngIf="dataLength === 0">
-      <div class="flex-col">
-        <svg-icon src="assets/icons/solid/empty.svg" [svgClass]="'h-16 w-16'"></svg-icon>
-        <p class="text-sm text-gray-400 dark:text-night-200">No data</p>
+      <div class="flex justify-center" *ngIf="dataLength === 0">
+        <div class="flex-col">
+          <svg-icon src="assets/icons/solid/empty.svg" [svgClass]="'h-16 w-16'"></svg-icon>
+          <p class="text-sm text-gray-400 dark:text-night-200">No data</p>
+        </div>
       </div>
+
+
     </div>
-
-
   </div>
-
-
 </div>
 
