--- a/src/app/modules/dashboard/components/conversions-impressions/conversions-impressions.component.html
+++ b/src/app/modules/dashboard/components/conversions-impressions/conversions-impressions.component.html
@@ -1,31 +1,34 @@
 <div class="flex  flex-col rounded-lg bg-white p-8 dark:bg-night-700">
-  <div class="mb-4 flex items-center justify-between">
-    <div class="flex-col items-center">
-      <h3 class="text-md font-bold text-gray-900 dark:text-night-50">Conversion Vs Impressions</h3>
-      <span class="text-sm text-gray-400 dark:text-night-300">Performance by gender</span>
-    </div>
+  <div class="flex justify-center" *ngIf="loading">
+    <div class="loader simple-circle"></div>
   </div>
-  <div class="flex-col h-[420px] rounded-lg bg-white px-8 py-8 dark:bg-night-700 sm:flex-row">
-    <div id="chart">
+  <div *ngIf="!loading">
+    <div class="mb-4 flex items-center justify-between">
+      <div class="flex-col items-center">
+        <h3 class="text-md font-bold text-gray-900 dark:text-night-50">Conversion Vs Impressions</h3>
+        <span class="text-sm text-gray-400 dark:text-night-300">Performance by gender</span>
+      </div>
+    </div>
+    <div class="flex-col h-[420px] rounded-lg bg-white px-8 py-8 dark:bg-night-700 sm:flex-row">
       <div id="chart">
-        <apx-chart
-          *ngIf="dataLength > 0"
-          [series]="chartOptions.series!"
-          [chart]="chartOptions.chart!"
-          [labels]="chartOptions.labels!"
-          [fill]="chartOptions.fill!"
-          [stroke]="chartOptions.stroke!"
-          [responsive]="chartOptions.responsive!"
-        ></apx-chart>
-      </div>
-      <div class="flex justify-center" *ngIf="dataLength === 0">
-        <div class="flex-col">
-          <svg-icon src="assets/icons/solid/empty.svg" [svgClass]="'h-16 w-16'"></svg-icon>
-          <p class="text-sm text-gray-400 dark:text-night-200">No data</p>
+        <div id="chart">
+          <apx-chart
+            *ngIf="dataLength > 0"
+            [series]="chartOptions.series!"
+            [chart]="chartOptions.chart!"
+            [labels]="chartOptions.labels!"
+            [fill]="chartOptions.fill!"
+            [stroke]="chartOptions.stroke!"
+            [responsive]="chartOptions.responsive!"
+          ></apx-chart>
         </div>
-      </div>
-
-
+        <div class="flex justify-center" *ngIf="dataLength === 0">
+          <div class="flex-col">
+            <svg-icon src="assets/icons/solid/empty.svg" [svgClass]="'h-16 w-16'"></svg-icon>
+            <p class="text-sm text-gray-400 dark:text-night-200">No data</p>
+          </div>
+        </div>
+    </div>
   </div>
 
 
