--- a/src/app/modules/dashboard/components/conversions-impressions/conversions-impressions.component.html
+++ b/src/app/modules/dashboard/components/conversions-impressions/conversions-impressions.component.html
@@ -12,7 +12,7 @@
     <div class="flex-col h-[420px] rounded-lg bg-white px-8 py-8 dark:bg-night-700 sm:flex-row">
       <div id="chart">
         <div id="chart">
-          <apx-chart
+          <!-- <apx-chart
             *ngIf="dataLength > 0"
             [series]="chartOptions.series!"
             [chart]="chartOptions.chart!"
@@ -20,6 +20,20 @@
             [fill]="chartOptions.fill!"
             [stroke]="chartOptions.stroke!"
             [responsive]="chartOptions.responsive!"
+          ></apx-chart> -->
+
+          <apx-chart
+          *ngIf="dataLength > 0"
+          [series]="chartOptions.series!"
+          [chart]="chartOptions.chart!"
+          [dataLabels]="chartOptions.dataLabels!"
+          [plotOptions]="chartOptions.plotOptions!"
+          [yaxis]="chartOptions.yaxis!"
+          [legend]="chartOptions.legend!"
+          [colors]="chartOptions.colors!"
+          [stroke]="chartOptions.stroke!"
+          [tooltip]="chartOptions.tooltip!"
+          [xaxis]="chartOptions.xaxis!"
           ></apx-chart>
         </div>
         <div class="flex justify-center" *ngIf="dataLength === 0">
